// file: proto/gcommon/v1/organization/messages/access_control.proto
// version: 1.0.0
// guid: 0327cd1d-766b-46e4-b980-f039bbde89ef

edition = "2023";

package gcommon.v1.organization.messages.access_control;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
import "proto/gcommon/v1/organization/messages/time_restriction.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/proto/proto/gcommon/v1/organization/messages/access_control";

message OrganizationAccessControl {
  // IP address whitelist for tenant access
  repeated string ip_whitelist = 1;

  // Allowed authentication methods
  repeated string auth_methods = 2;

  // Session timeout in minutes
  int32 session_timeout = 3;

  // Maximum concurrent sessions
  int32 max_concurrent_sessions = 4;

  // Geographic access restrictions
  repeated string allowed_countries = 5;

  // Time-based access restrictions
  repeated TimeRestriction time_restrictions = 6;
}
